# self_practice

./: CMakeLists.txt  README.md  main.cpp
practice_0/: CMakeLists.txt
practice_0/include/: hello.h
practice_0/src/: hello.cpp
practice_1/: CMakeLists.txt
practice_1/include/: world.h
practice_1/src/: world.cpp
